[package]
name = "scsi"
version = "0.2.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
license= "Apache-2.0"
description = "A `no-std` library for easily interfacing with SCSI-based storage devices."
categories = ["embedded", "filesystem", "no-std"]
keywords = ["usb", "scsi", "storage"]
repository = 'https://github.com/ischeinkman/scsi-rs'

[dependencies.byteorder]
version = "1.2.7"
default-features = false
